# model_db

./: README.md  pyproject.toml
.github/workflows/: python-app.yml
src/: main.py
src/api/: api.py
src/api/routers/: projects.py
src/cruds/: project.py
src/db/: database.py
src/models/: project.py
src/schemas/: project.py
